# agentic-ai-for-python-course

./: README.md  simone-dalla-cursor-rules.md
code/audio-player/: README.md  details.html  details.js  index.html  index.js  styles.css  tracks.json
code/audio-player/.cursor/commands/: web-design-purist.md
code/gittyup/: .gitignore  .gittyup.yaml.example  AGENTS.md  COMMIT_MESSAGE.txt  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  RULES_APPLIED.md  change-log.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
code/gittyup/docs/: config-advanced.yaml  config-minimal.yaml  configuration.md  phase1-completion.md  phase2-completion.md
code/gittyup/gittyup/: models.py  reporter.py
code/gittyup/plans/: implementation-plan.md  quick-reference.md
code/gittyup/src/gittyup/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  git_operations.py  logger.py  output.py  output_rich.py  scanner.py
code/gittyup/tests/: __init__.py  test_cli.py  test_config.py  test_git_operations.py  test_logger.py  test_models.py  test_reporter.py  test_scanner.py
