[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gittyup"
version = "0.1.0"
description = "CLI tool to automatically update all Git repositories in a directory tree"
authors = [{name = "Gitty Up Team", email = "info@gittyup.dev"}]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.9"
keywords = ["git", "cli", "developer-tools", "automation", "git-pull"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "click>=8.1.0",
    "colorama>=0.4.6",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "mypy>=1.7.1",
    "ruff>=0.1.8",
]

[project.scripts]
gittyup = "gittyup.cli:main"

[project.urls]
Homepage = "https://github.com/gittyup/gittyup"
Repository = "https://github.com/gittyup/gittyup"
Issues = "https://github.com/gittyup/gittyup/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

